objects/Sales_Contract__c/Sales_Contract__c.object-meta.xml
<CustomObject>
    <description>Hold the high level details of a sales contract.</description>
    <label>Sales Contract</label>
    <nameField>
        <displayFormat>HEN{000000}</displayFormat>
        <label>Sales Contract Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>