objects/Sales_Contract__c/fields/Call_Out_Charge_4_Hour_Response__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_4_Hour_Response__c</fullName>
    <description>Call Out Charge - 4 Hour Response</description>
    <label>Call Out Charge - 4 Hour Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>