objects/Sales_Contract__c/fields/Call_Out_Charge_8_Hour_Response_OOH__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_8_Hour_Response_OOH__c</fullName>
    <description>Call Out Charge - 8 Hour Response OOH</description>
    <label>Call Out Charge - 8 Hour Response OOH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>