objects/Sales_Contract__c/fields/Call_Out_Charge_incl_First_15_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Charge_incl_First_15_Minutes__c</fullName>
    <description>Call Out Charge incl. First 15 Minutes</description>
    <label>Call Out Charge incl. First 15 Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>