objects/Sales_Contract__c/fields/Call_Out_OOH_Charge_incl_First_Hour__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_OOH_Charge_incl_First_Hour__c</fullName>
    <description>Call Out OOH Charge incl. First Hour</description>
    <label>Call Out OOH Charge incl. First Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>