objects/Sales_Contract__c/fields/Call_Out_OOH_Charge_Per_Hour_Thereafter__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_OOH_Charge_Per_Hour_Thereafter__c</fullName>
    <description>Call Out OOH Charge Per Hour Thereafter</description>
    <label>Call Out OOH Charge Per Hour Thereafter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>