objects/Sales_Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Contracts</relationshipLabel>
    <relationshipName>Sales_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>