objects/Sales_Contract__c/fields/OFFICE_NOTES__c.field-meta.xml
<CustomField>
    <fullName>OFFICE_NOTES__c</fullName>
    <description>OFFICE NOTES</description>
    <label>OFFICE NOTES</label>
    <type>TextArea</type>
</CustomField>