objects/Sales_Contract__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Name from Opportunity</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Contracts</relationshipLabel>
    <relationshipName>Sales_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>