objects/Sales_Contract__c/fields/Per_Emergency_Light__c.field-meta.xml
<CustomField>
    <fullName>Per_Emergency_Light__c</fullName>
    <description>Per Emergency Light</description>
    <label>Per Emergency Light</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>