objects/Sales_Contract__c/fields/Per_Fire_Blanket__c.field-meta.xml
<CustomField>
    <fullName>Per_Fire_Blanket__c</fullName>
    <description>Per Fire Blanket</description>
    <label>Per Fire Blanket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>