objects/Sales_Contract__c/fields/Per_Fire_Extinguisher__c.field-meta.xml
<CustomField>
    <fullName>Per_Fire_Extinguisher__c</fullName>
    <description>Per Fire Extinguisher</description>
    <label>Per Fire Extinguisher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>