objects/Sales_Contract__c/fields/Per_Hose_Reel__c.field-meta.xml
<CustomField>
    <fullName>Per_Hose_Reel__c</fullName>
    <description>Per Hose Reel</description>
    <label>Per Hose Reel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>