objects/Sales_Contract__c/fields/Per_Hydrant__c.field-meta.xml
<CustomField>
    <fullName>Per_Hydrant__c</fullName>
    <description>Per Hydrant</description>
    <label>Per Hydrant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>