objects/Sales_Contract__c/fields/Per_Riser__c.field-meta.xml
<CustomField>
    <fullName>Per_Riser__c</fullName>
    <description>Per Riser</description>
    <label>Per Riser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>