objects/Sales_Contract__c/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <description>Pricing Notes</description>
    <label>Pricing Notes</label>
    <type>TextArea</type>
</CustomField>