objects/Sales_Contract__c/fields/PRIVATE_NOTES__c.field-meta.xml
<CustomField>
    <fullName>PRIVATE_NOTES__c</fullName>
    <description>PRIVATE NOTES</description>
    <label>PRIVATE NOTES</label>
    <type>TextArea</type>
</CustomField>