objects/Sales_Contract__c/fields/Purchase_Order_no__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_no__c</fullName>
    <formula>Customer__r.Parent_Purchase_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order no</label>
    <type>Text</type>
</CustomField>