objects/Sales_Contract__c/fields/Sales_Contract_Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Additional_Instructions__c</fullName>
    <description>Sales Contracts Additional Instructions</description>
    <inlineHelpText>Sales Contracts Additional Instructions</inlineHelpText>
    <label>Sales Contract Additional Instructions</label>
    <type>TextArea</type>
</CustomField>