objects/Sales_Contract__c/fields/Sales_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Status__c</fullName>
    <description>Sales Contract Status</description>
    <inlineHelpText>Sales Contract Status is not linked to any other status fields</inlineHelpText>
    <label>Sales Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>