objects/Sales_Contract__c/fields/Sales_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Type__c</fullName>
    <label>Sales Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ansul</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Detector Cleaning</fullName>
            </value>
            <value>
                <fullName>Disabled/Nursecall Alarm</fullName>
            </value>
            <value>
                <fullName>Door Access Testing</fullName>
            </value>
            <value>
                <fullName>Dry Riser</fullName>
            </value>
            <value>
                <fullName>Emergency Lighting</fullName>
            </value>
            <value>
                <fullName>Fire Alarm</fullName>
            </value>
            <value>
                <fullName>Fire Alarm + Emergency Lighting</fullName>
            </value>
            <value>
                <fullName>Fire Extinguisher</fullName>
            </value>
            <value>
                <fullName>Fire Curtain Servicing</fullName>
            </value>
            <value>
                <fullName>Fire Damper</fullName>
            </value>
            <value>
                <fullName>Fire Hose Reel</fullName>
            </value>
            <value>
                <fullName>Fire Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Fire Suppression System</fullName>
            </value>
            <value>
                <fullName>Fire Training</fullName>
            </value>
            <value>
                <fullName>Gaseous Suppression</fullName>
            </value>
            <value>
                <fullName>Group Correspondance</fullName>
            </value>
            <value>
                <fullName>Hydrant</fullName>
            </value>
            <value>
                <fullName>Integrity Test</fullName>
            </value>
            <value>
                <fullName>Intruder Alarm</fullName>
            </value>
            <value>
                <fullName>Lone Worker Alarm System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portable Appliance Testing</fullName>
            </value>
            <value>
                <fullName>Smoke Vent Servicing</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
            <value>
                <fullName>Tagging Security Machines</fullName>
            </value>
            <value>
                <fullName>Vesda Alarm Servicing</fullName>
            </value>
            <value>
                <fullName>Voice Evacuation</fullName>
            </value>
            <value>
                <fullName>Water Leak Detection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>