objects/Sales_Contract__c/fields/Special_Technician_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Technician_Instructions__c</fullName>
    <description>Special Technician Instructions</description>
    <inlineHelpText>These instructions will populate onto the Message on a Visit</inlineHelpText>
    <label>Special Technician Instructions</label>
    <type>TextArea</type>
</CustomField>