objects/Sales_Contract__c/fields/Standard_Reactive_Call_Out_Charge__c.field-meta.xml
<CustomField>
    <fullName>Standard_Reactive_Call_Out_Charge__c</fullName>
    <description>Standard Reactive Call Out Charge</description>
    <label>Standard Reactive Call Out Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>