objects/Sales_Contract__c/validationRules/Per_Fire_ext_needs_per_fire_blanket.validationRule-meta.xml
<ValidationRule>
    <fullName>Per_Fire_ext_needs_per_fire_blanket</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( TEXT( Per_Fire_Extinguisher__c ) &lt;&gt; &quot;&quot; ,
TEXT( Per_Fire_Blanket__c ) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Per_Fire_Blanket__c</errorDisplayField>
    <errorMessage>If you have a price per Fire Extinguisher, please also fill in a price per fire blanket.</errorMessage>
</ValidationRule>