objects/Sales_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Contract_Type__c</columns>
    <columns>OFFICE_NOTES__c</columns>
    <columns>Pricing_Notes__c</columns>
    <columns>Service_Charge__c</columns>
    <columns>Call_Out_Charge_4_Hour_Response__c</columns>
    <columns>Call_Out_Charge_incl_First_15_Minutes__c</columns>
    <columns>Call_Out_Charge_incl_First_Hour__c</columns>
    <columns>Call_Out_Charge_Per_Hour_Thereafter__c</columns>
    <columns>Call_Out_OOH_Charge_incl_First_15_Mins__c</columns>
    <columns>Call_Out_OOH_Charge_incl_First_Hour__c</columns>
    <columns>Call_Out_OOH_Charge_Per_Hour_Thereafter__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>